@@ -47,7 +47,7 @@
       "y": 22,
       "elevation": 0,
       "dest_map": "MAP_ROUTE103",
-      "dest_warp_id": 0
+      "dest_warp_id": "0"
     }
   ],
   "coord_events": [
