@@ -1,0 +1,3 @@
+custom_scripts=
+recent_map=AlteringCave
+use_encounter_json=1
