@@ -10870,6 +10870,75 @@
               }
             ]
           }
+        },
+        {
+          "map": "MAP_ALTERING_CAVE",
+          "base_label": "gAlteringCave0",
+          "land_mons": {
+            "encounter_rate": 10,
+            "mons": [
+              {
+                "min_level": 3,
+                "max_level": 13,
+                "species": "SPECIES_MAREEP"
+              },
+              {
+                "min_level": 18,
+                "max_level": 28,
+                "species": "SPECIES_AIPOM"
+              },
+              {
+                "min_level": 19,
+                "max_level": 29,
+                "species": "SPECIES_PINECO"
+              },
+              {
+                "min_level": 18,
+                "max_level": 28,
+                "species": "SPECIES_SHUCKLE"
+              },
+              {
+                "min_level": 18,
+                "max_level": 28,
+                "species": "SPECIES_TEDDIURSA"
+              },
+              {
+                "min_level": 12,
+                "max_level": 20,
+                "species": "SPECIES_HOUNDOUR"
+              },
+              {
+                "min_level": 18,
+                "max_level": 28,
+                "species": "SPECIES_STANTLER"
+              },
+              {
+                "min_level": 18,
+                "max_level": 28,
+                "species": "SPECIES_SMEARGLE"
+              },
+              {
+                "min_level": 13,
+                "max_level": 15,
+                "species": "SPECIES_EEVEE"
+              },
+              {
+                "min_level": 15,
+                "max_level": 20,
+                "species": "SPECIES_DRAGONAIR"
+              },
+              {
+                "min_level": 37,
+                "max_level": 42,
+                "species": "SPECIES_ALAKAZAM"
+              },
+              {
+                "min_level": 35,
+                "max_level": 40,
+                "species": "SPECIES_GENGAR"
+              }
+            ]
+          }
         }
       ]
     },
