@@ -40,6 +40,7 @@ Buff rivals team to include a Grumpig and Hitmonchan at Lilycove City battle
 Add trading with self at the Weather Institute
 Prompt for reusing Repels
 In game way to get old sea map and Mystic Ticket
+Added Altering Cave encounters
 
 3 Superboss battles
 	- Red in Stevens old cave
